# webview2-client

./: Cargo.toml  build.rs
assets/: client.manifest  manifest.rc
src/: main.rs  script.js
