[package]
name = "webview2-client"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"
debug = false
debug-assertions = false

[dependencies]
windows = { version = "0.61.1", features = [ "Win32_Graphics_Gdi" ], default-features = false }
webview2-com = { version= "0.38.0", default-features = false }

[build-dependencies]
embed-resource = "3.0.6"
